--- a/com.bloo.xrsdk/package.json
+++ b/com.bloo.xrsdk/package.json
@@ -1,9 +1,9 @@
 {
   "name": "com.bloo.xrsdk",
   "displayName": "Bloo XR Plugin",
-  "version": "1.0.2",
+  "version": "0.0.2",
   "unity": "2022.8",
-  "description": "Provides native Bloo XR integration for use with Unity's multi-platform XR API.",
+  "description": "Provides display and input support for Bloo XR devices.",
   "keywords": [
     "xrsdk",
     "vr",
@@ -13,7 +13,10 @@
     "core"
   ],
   "dependencies": {
-    "com.unity.xr.openxr": "1.2.8",
+    "com.unity.xr.management": "3.2.0",
+    "com.unity.xr.openxr": "1.4.2",
+    "com.unity.xr.interaction.toolkit": "2.1.1",
     "com.unity.inputsystem": "1.3.0"
   }
 }
+
