--- a/UE SDK/Bloo XR Integration SDK V1.0.0_Unreal/BlooOpenXR.uplugin
+++ b/UE SDK/Bloo XR Integration SDK V1.0.0_Unreal/BlooOpenXR.uplugin
@@ -2,11 +2,11 @@
 	"FileVersion": 3,
 	"Version": 1,
 	"VersionName": "1.0.0",
-	"FriendlyName": "Bloo OpenXR",
-	"Description": "OpenXR extension to support Bloo headsets and features. Disable the other VR plugin when enabling this plugin.",
+	"FriendlyName": "BLOO OpenXR",
+	"Description": "OpenXR extension to support BLOO headsets and features. Disable the other VR plugin when enabling this plugin.",
 	"Category": "Virtual Reality",
-	"CreatedBy": "Bloo",
-	"CreatedByURL": "https://www.bloo.com/",
+	"CreatedBy": "BLOO",
+	"CreatedByURL": "https://blooxr.com/",
 	"DocsURL": "",
 	"MarketplaceURL": "",
 	"SupportURL": "",
